# qun

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: build.yml  doc.yml
docs/: .gitignore  README.md  package.json
docs/src/: frontend.tsx  index.html
release/resources/: Bunny.attribution.md  CarConcept.attribution.md  City1.attribution.md  ClearNight.attribution.md  CubeMap.attribution.md  NegativeScaleTest.attribution.md
release/shaders/: main.frag  main.vert  main2d.frag  main2d.vert
src/: constants.hpp  game.cpp  game.hpp  main.cpp
src/asset/: asset.hpp
src/asset/gltf/: convert.cpp  gltf.cpp  gltf.hpp  material.cpp  node.cpp  texture.cpp
src/asset/img/: img.cpp  img.hpp
src/components/: boid.hpp  light.hpp  material.hpp  model.hpp  parent.hpp  particle.hpp  physics.hpp  renderable.hpp  transform.hpp
src/input/raw/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/plugins/debug-cam-controller/: debug-cam-controller.cpp  debug-cam-controller.hpp
src/plugins/entt/: entt.cpp  entt.hpp
src/plugins/input/: input.cpp  input.hpp
src/plugins/physics/: physics.cpp  physics.hpp
src/plugins/render/: render.cpp  render.hpp
src/plugins/time/: time.cpp  time.hpp
src/plugins/transform/: transform.cpp  transform.hpp
src/registry/: entity.cpp  entity.hpp  registry.cpp  registry.hpp
src/render/: material.cpp  material.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex.hpp  window.cpp  window.hpp
src/render/material/: material2d.cpp  material2d.hpp  material3d.cpp  material3d.hpp
src/render/model/: asset.cpp  asset.hpp  cube.cpp  cube.hpp  model.hpp  quad.cpp  quad.hpp  triangle.cpp  triangle.hpp
src/render/model/2d/: quad.cpp  quad.hpp
src/render/model/3d/: asset.cpp  asset.hpp  cube.cpp  cube.hpp  icosphere.cpp  icosphere.hpp  sphere.cpp  sphere.hpp
src/render/shader/: program.cpp  program.hpp  shader.cpp
src/render/uniform/: block.cpp  block.hpp  single.hpp
src/resource/: asset.cpp  asset.hpp
src/resource/img/: img.cpp  img.hpp
src/resources/: time.hpp
src/scenes/: nfs.cpp  nfs.hpp  test.cpp  test.hpp
src/shader/: program.cpp  program.hpp  shader.cpp  shader.hpp
src/shader/shaders/: basic.frag  basic.vert
src/systems/: boid-spawner.cpp  boid-spawner.hpp  boids.cpp  boids.hpp  particle-spawner.cpp  particle-spawner.hpp  particle.cpp  particle.hpp  transform.cpp  transform.hpp
src/util/: error.cpp  error.hpp
